--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile('org.springframework.boot:spring-boot-starter-redis')
+    compile('com.google.code.gson:gson:2.7')
 
 	runtime('mysql:mysql-connector-java')
 	compile('org.springframework.data:spring-data-redis:1.4.1.RELEASE')
