--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.7.RELEASE'
+		springBootVersion = '1.5.6.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -29,11 +29,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	compile("org.springframework.boot:spring-boot-starter-web")
-	compile('org.springframework.boot:spring-boot-starter-redis')
-    compile('com.google.code.gson:gson:2.7')
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '1.5.6.RELEASE'
+	compile('com.google.code.gson:gson:2.7')
+	compile('redis.clients:jedis:2.9.0')
+	compile group: 'org.springframework.data', name: 'spring-data-redis', version: '1.8.6.RELEASE'
 
-	runtime('mysql:mysql-connector-java')
-	compile('org.springframework.data:spring-data-redis:1.4.1.RELEASE')
-	compile('redis.clients:jedis:2.6.1')
-	compile('org.apache.commons:commons-pool2:2.4.2')
 }
