--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 jar {
-	baseName = 'cachedemo'
+	baseName = 'cache_demo'
 	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
